--- a/sh/bash_adv.ipynb
+++ b/sh/bash_adv.ipynb
@@ -1268,6 +1268,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63050b09-2815-4efe-ae61-0d6d65989170",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "[html копия презентации](https://raw.githubusercontent.com/koch-econ/devops_py_lab/1d86ff1e2e3e4211df23fed6ff146481c682fea1/out/slides_ver1.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "id": "f78380ea",
