--- a/python-lab-practical-project.ipynb
+++ b/python-lab-practical-project.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "49bf99d5-0866-4341-8c9f-1ca235e36444",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"file:/out/slides_obrazec_ver_1.html?encoding=utf8\"\n",
+       "            src=\"devops_py_lab/out/blob/main/slides_obrazec_ver_1.html?encoding=utf8\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -336,10 +336,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fc35fb7bd90>"
+       "<IPython.lib.display.IFrame at 0x7f91eed746a0>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,8 +347,16 @@
    "source": [
     "import os\n",
     "from IPython.display import IFrame\n",
-    "IFrame(src=\"file:/out/slides_obrazec_ver_1.html\", width=800, height=600,encoding=\"utf8\")"
+    "IFrame(src=\"devops_py_lab/out/blob/main/slides_obrazec_ver_1.html\", width=800, height=600,encoding=\"utf8\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96666594-3b63-4e0a-abe5-cc53be12afa1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
