--- a/python-lab-practical-project.ipynb
+++ b/python-lab-practical-project.ipynb
@@ -81,7 +81,7 @@
     "| py/markdown2output\\_ver\\_*N*.py     | преобразование в выходной формат (.pptx)                 |\n",
     "| pic                                 | файлы картинок                                           |\n",
     "| pic/*product_id*.png                | фотография товара с артикулом *product_id*.png           |\n",
-    "| template                            | шаблоны презентаций                                      |\n",
+    "| tmpl                                | шаблоны презентаций                                      |\n",
     "| csv                                 | текстовые файлы данных с разделителем полей `';'`        |\n",
     "| csv/wb_dquotes.csv                  | все поля закавычены `\"`                                  |\n",
     "| csv/wb.csv                          | все текстовые фоля закавычены `\"`                        |\n",
@@ -193,12 +193,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mkdir template"
+    "mkdir tmpl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "dc18154d-4f47-408a-8b7f-61475d8c3e84",
    "metadata": {},
    "outputs": [
@@ -206,12 +206,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing template/category_ver_1.md\n"
+      "Overwriting tmpl/category_ver_1.md\n"
      ]
     }
    ],
    "source": [
-    "%%file template/category_ver_1.md\n",
+    "%%file tmpl/category_ver_1.md\n",
     "\n",
     "## Техника для кухни\n",
     "\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "78cad381-a805-459d-b307-cad79ee64b6f",
    "metadata": {},
    "outputs": [
@@ -230,12 +230,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing template/slides_ver_1.md\n"
+      "Overwriting tmpl/slides_ver_1.md\n"
      ]
     }
    ],
    "source": [
-    "%%file template/slides_ver_1.md\n",
+    "%%file tmpl/slides_ver_1.md\n",
     "## мини-печь StarWind\n",
     ":::::::::::::: {.columns}\n",
     "::: {.column }\n",
@@ -246,7 +246,7 @@
     ":::\n",
     "::: {.column }\n",
     "\n",
-    "![фото товара](13883932.png)\n",
+    "![фото товара](pic/13883932.png){width=120px}\n",
     ":::\n",
     "::::::::::::::\n",
     "\n",
@@ -260,14 +260,14 @@
     ":::\n",
     "::: {.column }\n",
     "\n",
-    "![фото товара](8483040.png)\n",
+    "![фото товара](pic/8483040.png){width=120px}\n",
     ":::\n",
     "::::::::::::::"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "ad427afa-9baf-4ee8-b9b8-0f1322917a29",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,8 @@
       "slides.html                  slides_v2.html\n",
       "slides.md                    slides_v2.md\n",
       "slides.pptx                  slides_v2.pptx\n",
-      "slides_obrazec_ver_1.html    slides_ver1.html\n",
+      "slides_obrazec_ver1.html     slides_ver1.html\n",
+      "slides_obrazec_ver_1.html    slides_ver1.pptx\n",
       "slides_obrazec_ver_1.pptx    ~$slides_obrazec_ver_1.pptx\n"
      ]
     }
@@ -289,8 +290,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "584534f4-4a91-416b-9987-f4694edcffed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pandoc -o out/slides_obrazec_ver1.html --self-contained --metadata title=\"товары WB\"   tmpl/category_ver_1.md tmpl/slides_ver_1.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "211c44bc-497d-4d47-8d1b-4bb00e0229a4",
+   "metadata": {},
+   "source": [
+    "```sh\n",
+    "pandoc -o out/slides_obrazec_ver1.html --self-contained --metadata title=\"товары WB\"   template/category_ver_1.md template/slides_ver_1.md\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "609c4489-54e4-43fa-837c-f1a2719def52",
+   "metadata": {},
+   "source": [
+    "Результат [html](out/slides_obrazec_ver_1.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1a538a32-0871-45f4-aef0-e5ddd840cb5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,65 +327,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "5dab4b53-c701-4543-8981-fbe875c661d0",
+   "cell_type": "markdown",
+   "id": "f7072ae7-8f77-48cf-9541-85a1f7fc9d0c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "out/slides_obrazec_ver_1.html\n"
-     ]
-    }
-   ],
    "source": [
-    "%ls \"out/slides_obrazec_ver_1.html\""
+    "```sh\n",
+    "pandoc -o out/slides_ver1.pptx  template/category_ver_1.md template/slides_ver_1.md\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "49bf99d5-0866-4341-8c9f-1ca235e36444",
+   "cell_type": "markdown",
+   "id": "2f21bffa-a812-4dd6-98ba-94a77d7de5a2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"800\"\n",
-       "            height=\"600\"\n",
-       "            src=\"devops_py_lab/out/blob/main/slides_obrazec_ver_1.html?encoding=utf8\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f91eed746a0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "import os\n",
-    "from IPython.display import IFrame\n",
-    "IFrame(src=\"devops_py_lab/out/blob/main/slides_obrazec_ver_1.html\", width=800, height=600,encoding=\"utf8\")"
+    "Результат [pptx](out/slides_obrazec_ver_1.pptx)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96666594-3b63-4e0a-abe5-cc53be12afa1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
