--- a/python-lab-practical-project.ipynb
+++ b/python-lab-practical-project.ipynb
@@ -81,7 +81,7 @@
     "| py/markdown2output\\_ver\\_*N*.py     | преобразование в выходной формат (.pptx)                 |\n",
     "| pic                                 | файлы картинок                                           |\n",
     "| pic/*product_id*.png                | фотография товара с артикулом *product_id*.png           |\n",
-    "| tmpl                                | шаблоны презентаций                                      |\n",
+    "| tmpl                                | шаблоны презентаций  в формате Markdown                                    |\n",
     "| csv                                 | текстовые файлы данных с разделителем полей `';'`        |\n",
     "| csv/wb_dquotes.csv                  | все поля закавычены `\"`                                  |\n",
     "| csv/wb.csv                          | все текстовые фоля закавычены `\"`                        |\n",
@@ -222,7 +222,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
+   "id": "1352e32a-5d93-41bc-90b3-f690cf225e51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing tmpl/category_ver_4.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file tmpl/category_ver_4.md\n",
+    "\n",
+    "## Техника для кухни\n",
+    "\n",
+    "![](pic/{category_name}.jpeg)\n",
+    "\n",
+    "* * * \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "78cad381-a805-459d-b307-cad79ee64b6f",
    "metadata": {},
    "outputs": [
@@ -262,25 +286,53 @@
     "\n",
     "![фото товара](pic/8483040.png){width=120px}\n",
     ":::\n",
-    "::::::::::::::"
+    "::::::::::::::    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ad427afa-9baf-4ee8-b9b8-0f1322917a29",
+   "execution_count": 34,
+   "id": "079305f0-a33c-40b4-91a8-7dc6d412d5ad",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "slides.html                  slides_v2.html\n",
-      "slides.md                    slides_v2.md\n",
-      "slides.pptx                  slides_v2.pptx\n",
-      "slides_obrazec_ver1.html     slides_ver1.html\n",
-      "slides_obrazec_ver_1.html    slides_ver1.pptx\n",
-      "slides_obrazec_ver_1.pptx    ~$slides_obrazec_ver_1.pptx\n"
+      "Overwriting tmpl/slides_ver_2.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file tmpl/slides_ver_2.md\n",
+    "## {model}\n",
+    ":::::::::::::: {.columns}\n",
+    "::: {.column }\n",
+    "* вендор: {vendor}\n",
+    "* модель: {model}\n",
+    "* артикул: {product_id}\n",
+    "* цена: {price}\n",
+    ":::\n",
+    "::: {.column }\n",
+    "\n",
+    "![фото товара](pic/{product_id}.png){width=120px}\n",
+    ":::\n",
+    "::::::::::::::\n",
+    "\n",
+    "* * *    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "120a99f3-7e3b-43bc-bb83-acaa4b34095a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slides_obrazec_ver_1.html  slides_ver_1.pptx\n"
      ]
     }
    ],
@@ -290,12 +342,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "584534f4-4a91-416b-9987-f4694edcffed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pandoc -o out/slides_obrazec_ver1.html --self-contained --metadata title=\"товары WB\"   tmpl/category_ver_1.md tmpl/slides_ver_1.md"
+    "!pandoc -o out/slides_obrazec_ver_1.html --self-contained --metadata title=\"товары WB\"   tmpl/category_ver_1.md tmpl/slides_ver_1.md"
    ]
   },
   {
@@ -318,12 +370,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "1a538a32-0871-45f4-aef0-e5ddd840cb5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pandoc -o out/slides_ver1.pptx  template/category_ver_1.md template/slides_ver_1.md"
+    "!pandoc -o out/slides_ver_1.pptx  tmpl/category_ver_1.md tmpl/slides_ver_1.md"
    ]
   },
   {
@@ -332,7 +384,7 @@
    "metadata": {},
    "source": [
     "```sh\n",
-    "pandoc -o out/slides_ver1.pptx  template/category_ver_1.md template/slides_ver_1.md\n",
+    "pandoc -o out/slides_ver_1.pptx  template/category_ver_1.md template/slides_ver_1.md\n",
     "```"
    ]
   },
@@ -346,8 +398,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "e627d4dc-db88-4da0-99ad-2b13117b4b2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slides_obrazec_ver1.html  slides_ver_1.pptx\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8a149aa-24bf-4c4f-819f-1d1ab4e16c24",
    "metadata": {},
    "outputs": [],
    "source": []
