add version sequence

--- a/python-lab-practical-project.ipynb
+++ b/python-lab-practical-project.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "079305f0-a33c-40b4-91a8-7dc6d412d5ad",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "120a99f3-7e3b-43bc-bb83-acaa4b34095a",
    "metadata": {},
    "outputs": [
@@ -415,9 +415,166 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "78f8bd86-eed3-45dc-aa8b-92271323e296",
+   "metadata": {},
+   "source": [
+    "## Предполагаемые этапы (версии развития проекта)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02141f6e-99e0-45e5-9aba-eb46b47dfca7",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "###  Версия 1. Генерация pptx по готовым файлам `tmpl/*_ver_1.md'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "53cd59cb-6a0f-4f70-802e-934a9de7e04c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing py/main_ver_1.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file py/main_ver_1.py\n",
+    "# import data_source_ver_N as ds\n",
+    "import markdown2output_ver_1.py  as m2o\n",
+    "\n",
+    "\n",
+    "tmpl_category_file=\"tmpl/category_ver_1.md\"\n",
+    "tmpl_slides_file=\"tmpl/slides_ver_1.md\"\n",
+    "\n",
+    "out_md_file=\"out/slides_ver_1.md\"\n",
+    "out_pptx_file=\"out/slides_ver_1.md\"\n",
+    "\n",
+    "pass # объединить файлы в один в директории out \n",
+    "\n",
+    "m2o.convert_to_pptx(out_md_file, out_pptx_file)  # преобразовать в pptx \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23036158-ad89-48af-ab54-76d7c3b29f42",
+   "metadata": {},
+   "source": [
+    "###  Версия 2. Генерация pptx по файлам `tmpl/*_ver_2.md' c подставлением данных из модуля `data_source_ver_2.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62d5d008-4af7-413e-8c07-c833815d8218",
+   "metadata": {},
+   "source": [
+    "Пока без титульных слайдов категорий товаров\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfce8576-deac-4849-ac30-b1f9ecbe9983",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "###  Версия 3. Генерация pptx по файлам `tmpl/*_ver_3.md' c подставлением данных из словаря discout_dict и списка category_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c74a768d-8adc-45cd-9c97-2af5fa55d5fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "category_list=[\"Прочие устройтсва\", \"Климатическая техника\" \"Красота и здоровье\", \"Садовая техника\",\"Техника для дома\",\"Техника для кухни\", \"Крупная бытовая техника\" ]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ce7e928-8590-49cc-b3f6-d830d2bd6c79",
+   "metadata": {},
+   "source": [
+    "Скидки на все товары этих вендоров"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "f9fba6b0-a279-4cc6-a843-184c40773e1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discount_dict={ \"Candy\":10, \"BBK\":20 }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fef87928-5644-4b20-9766-8282a9ab8419",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing tmpl/slides_ver_3.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file tmpl/slides_ver_3.md\n",
+    "## {model}\n",
+    ":::::::::::::: {.columns}\n",
+    "::: {.column }\n",
+    "* вендор: {vendor}\n",
+    "* модель: {model}\n",
+    "* артикул: {product_id}\n",
+    "* цена: {price}\n",
+    "* окончательная цена: ${discounted_price}\n",
+    "* скидка по акции: ${discout}%\n",
+    ":::\n",
+    "::: {.column }\n",
+    "\n",
+    "![фото товара](pic/{product_id}.png){width=120px}\n",
+    ":::\n",
+    "::::::::::::::\n",
+    "\n",
+    "* * * \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab09e34d-112e-4abf-9369-609b330975af",
+   "metadata": {},
+   "source": [
+    "###  Версия 4. Слайды должны быть упорядоченны по названиям категории товаров и дополнены титульными слайдами tmpl/category_ver_4.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f8267c1-ed29-4a14-9889-3d52f338a172",
+   "metadata": {},
+   "source": [
+    "###  Версия 5. Генераторные функции должны читать данные из csv файла"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8a149aa-24bf-4c4f-819f-1d1ab4e16c24",
+   "id": "b47f38d7-f32d-426b-be89-53091a4aafdd",
    "metadata": {},
    "outputs": [],
    "source": []
