--- a/sh/bash_adv.ipynb
+++ b/sh/bash_adv.ipynb
@@ -1391,6 +1391,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e7b5f5ef-4ba3-4348-a7e1-a50fa9cd76d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bash: declare: DISCOUNT_DIC: not found\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "declare -p DISCOUNT_DIC"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0037efbc",
    "metadata": {},
@@ -1733,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "id": "6b649351",
    "metadata": {
     "scrolled": true
@@ -1743,13 +1762,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created file '/Users/ikochergin/Documents/aon/shell_prg/pandoc-lab/sh/cat.txt'.\n"
+      "Created file '/Users/ikochergin/Documents/aon/devops_prog/lab_dev/devops_py_lab/sh/cat.txt'.\n"
      ]
     }
    ],
    "source": [
     "%%file cat.txt\n",
-    "Прочее\n",
+    "Прочие утройства\n",
     "Климатическая техника\n",
     "Красота и здоровье\n",
     "Садовая техника\n",
