--- a/python-lab-practical-project.ipynb
+++ b/python-lab-practical-project.ipynb
@@ -560,7 +560,7 @@
    "id": "ab09e34d-112e-4abf-9369-609b330975af",
    "metadata": {},
    "source": [
-    "###  Версия 4. Слайды должны быть упорядоченны по названиям категории товаров и дополнены титульными слайдами tmpl/category_ver_4.md"
+    "###  Версия 4. Слайды должны быть упорядочены по названиям категории товаров и дополнены титульными слайдами tmpl/category_ver_4.md"
    ]
   },
   {
@@ -568,7 +568,7 @@
    "id": "5f8267c1-ed29-4a14-9889-3d52f338a172",
    "metadata": {},
    "source": [
-    "###  Версия 5. Генераторные функции должны читать данные из csv файла"
+    "###  Версия 5. Генераторные функции должны читать данные из csv файла csv/wb.csv"
    ]
   },
   {
