--- a/python-lab-practical-project.ipynb
+++ b/python-lab-practical-project.ipynb
@@ -568,6 +568,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c911f021-1d83-4be9-b9ff-39f4dc8966fe",
+   "metadata": {},
+   "source": [
+    "Используйте lambda-выражения для указания последовательности сортировки"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5f8267c1-ed29-4a14-9889-3d52f338a172",
    "metadata": {},
    "source": [
